--- a/frauddetectormodel.ipynb
+++ b/frauddetectormodel.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Fraud Detection Model\n",
-    "In this tutorial I will walk you through one of the most important applications in machine learning, I will demonstrate how can construct a high-performance model to detect a credit card fraud by using deep learning model."
+    "In this project I will walk you through one of the most important applications in machine learning, I will demonstrate how can construct a high-performance model to detect a credit card fraud by using deep learning model."
    ]
   },
   {
